2004-02-09 Breda McColgan <breda.mccolgan@sun.com>

	* docs/C/figures/battstat-applet_window.png: Renamed from battstat-applet.png as per GNOME Documentation Style Guide

2004-02-09 Breda McColgan <breda.mccolgan@sun.com>

	* docs/C/battstat.xml: Updated for GNOME 2.6. Issued for technical review.
	* docs/C/battstat-C.omf: Updated for GNOME 2.6.
	* docs/C/l10n.txt: Created for GNOME 2.6.
	* docs/C/figures/ac_small.png: Created for GNOME 2.6.
	* docs/C/figures/battery_small.png: Created for GNOME 2.6.
	* docs/C/figures/flash_small.png: Created for GNOME 2.6.
	* docs/C/figures/warning_small.png: Created for GNOME 2.6.
	* docs/C/figures/batt_green.png: Created for GNOME 2.6.
	* docs/C/figures/batt_yellow.png: Created for GNOME 2.6.
	* docs/C/figures/batt_orange.png: Created for GNOME 2.6.
	* docs/C/figures/batt_red.png: Created for GNOME 2.6.

2004-02-08  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (CLEANFILES): Add .server and .server.in here.
        (#132071, Padraig O'Briain)

2004-01-31  Dennis Smit  <ds@nerds-incorporated.org>

	* battstat_applet.c (about_cb): put the
	check that checks if there is already an dialog
	under the const declaration.

2004-01-30  Dennis Smit  <ds@nerds-incorporated.org>

	* battstat/battstat.h: added about_box GtkWidget to the _ProgressData
	structure.
	* battstat/battstat_applet.c (destroy_applet): destroy the about
	dialog when it's present.
	(about_cb): check if there already is an about dialog for this
	instance and if so present it to the user. Also make use of
	the about box that is added to _ProgressData.
	(battstat_applet_fill): initialize the about_box member of
	_ProgressData with NULL.
	(destroy_about): removed as it was bogus.
	Fixes #132461

2004-01-27  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (APMINC): One last builddir != srcdir fix.
	(#129236, Mike Castle)

2004-01-18  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (install-data-local): builddir != srcdir fix.

2004-01-12  Kevin Vandersloot
