@@ -1,3 +1,8 @@
+2004-02-18  Kevin Vandersloot
+
+	* Makefile.am, battstat.c, properties.c: Open BSD support. From 
+	Julio M. Merino Vidal. Fixes bug #134661
+
 2004-02-09 Breda McColgan <breda.mccolgan@sun.com>
 
 	* docs/C/figures/battstat-applet_window.png: Renamed from battstat-applet.png as per GNOME Documentation Style Guide
